# Core-Memory

./: .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY_SPEC.md  CONTRIBUTING.md  DEPRECATION_PLAN.md  HEARTBEAT.md  LICENSE  MEMORY.md  MIGRATION_PLAN.md  PR_SUMMARY.md  README.md  WORKFLOW_AUTO.md  agent_crawler_fixtures.py  associate.py  consolidate.py  extract-beads.py  fix_watchapp_type.sh  install.sh  project.yml  promoted-context.md  pyproject.toml  run_association.py  setup.py  test_e2e.py  test_phase1_parity.py
.beads/: portfolio-voice-agent-v1-beads.md
.github/workflows/: architecture-guards.yml  benchmark-locomo.yml  openclaw-bridge-smoke.yml  publish-pypi.yml  test.yml
.mem-beads/: config.json  global.jsonl  index.json  session-main-2026-02-26.jsonl
.piper/: start-tts.sh
AIVoice/: AIVoiceApp.swift  AppCoordinator.swift  Info.plist
AIVoice/Agents/: AgentConfiguration.swift  AgentService.swift
AIVoice/Chat/: ChatConfiguration.swift  (+1 more)
AIVoiceWatch/: AIVoiceWatchApp.swift  ContentView.swift  Info.plist
Shared/: AudioMessage.swift
archive/: PR_SUMMARY.md
benchmarks/: README.md  contracts.py
core_memory/: ARCHITECTURE.md  REFACTOR_NOTES.md  __init__.py  _version.py  adapter_cli.py  archive_index.py  cli.py  cli_compat.py  cli_diagnostics.py  cli_handlers_graph.py  cli_handlers_integrations.py  cli_handlers_metrics.py  cli_handlers_migrate.py  cli_handlers_ops.py  cli_handlers_semantic.py  cli_handlers_setup.py  cli_handlers_store.py  cli_memory_handlers.py  cli_parser_extended.py  cli_parser_memory.py  cli_parser_ops.py  continuity_injection.py  dreamer.py  event_ingress.py  event_state.py  event_worker.py  events.py  graph.py  graph_semantic.py  graph_structural.py  graph_traversal.py  hygiene.py  identifiers.py  incidents.py  io_utils.py  live_session.py  llm_client.py  management.py  memory.py  memory_engine.py  (+15 more)
demo/: DEMO_SCRIPT.md  README.md  TODO.md  app.py  index.html
docs/: ARCHITECTURE.md  REFACTOR_NOTES.md  TODO.md  ab_test_report_memory_search_2026-03-05.md  adapter_layer_inventory.md  adapter_parity_matrix.md  adr_association_type_policy.md  approval_workflow.md  architecture_overview.md  bead_required_fields.md  canonical_contract.md  canonical_paths.md  canonical_surfaces.md  causal_grounding_problem_and_solution_plan.md  claim_layer.md  cleanup-plan.md  compatibility_ledger.md  concept_checkpoint_memory_elegance_2026-03-05.md  confidence_class.md  contributor_map.md  core_adapters_architecture.md  diagnostic_run_phase5_2026-03-05.md  dreamer_contract.md  edge_lifecycle.md  full_skill_test_report_memory_execute_2026-03-05.md  full_skill_test_report_memory_execute_post_tuning_2026-03-05.md  good_first_issue_seed.md  graph_backend_plugin.md  graph_memory.md  immutable_causal_edge_contract_and_plan.md  index.md  integration_contract.md  memory_search_ab_eval.md  memory_search_agent_playbook.md  memory_search_skill.md  memory_surfaces_spec.md  myelination_host_guide.md  phase3_trigger_model_progress.md  phase6_closeout_checklist.md  phase6_runtime_hardening_progress.md  (+72 more)
eval/: dreamer_behavior_eval.py  kpi_set.json  longitudinal_benchmark_v2.py  longitudinal_learning_eval.py  memory_execute_eval.py  memory_search_ab_compare.py  memory_search_smoke.py  paraphrase_eval.py  retrieval_eval.py  reviewer_quick_value_eval.py  reviewer_quick_value_v2.py
examples/: canonical_5min.py  claim_layer_demo.py  http_springai_client.py  openclaw_bridge_demo.py  proof_carry_forward.py  proof_policy_reuse.py  pydanticai_basic.py  pydanticai_demo_roundtrip.py  pydanticai_live_demo.py  pydanticai_with_memory.py  quickstart.py  store_compat_quickstart.py
mem_beads/: __init__.py  __main__.py  cli.py
memory/: 2026-02-26.md
plans/: mem-beads-enhancements-plan.md  mem-beads-links-spec.md  mem-beads-plan.md  mem-beads-project.md
portfolio-voice-agent/: .dockerignore  Dockerfile  README.md  fly.toml  package.json  pnpm-lock.yaml
scripts/: architecture_guards_baseline.json  audit_store_delegation.py  check_architecture_guards.py  check_test_suite_health.py  compat_surface_usage_baseline.json  consolidate.py  migration_drill.sh  openclaw_bridge_ci_smoke.sh  openclaw_bridge_doctor.sh  openclaw_bridge_install.sh  run_contributor_smoke.sh  run_pre_oss_matrix.sh  sidecar_parity_report.py  sidecar_sync_session.py  verify_pypi_mcp.py
tests/: README.md  conftest.py  test_adapter_boundary_pydanticai.py  test_adapter_contract_markers.py  test_adapter_parity_matrix_contract.py  test_agent_authored_contract_flags.py  test_agent_authored_contract_slice0.py  test_agent_authored_contract_validation.py  test_agent_authored_runtime_gate.py  test_agent_authored_runtime_gate_slice1.py  test_agent_authored_typed_ingress.py  test_agent_crawler_invoke.py  test_agent_crawler_invoke_slice3.py  test_agent_led_write_integrity.py  test_agentic_traversal_prereqs.py  test_approval_workflow.py  test_architecture_guards.py  test_archive_index.py  test_assembly_depth.py  test_association_classifier_fallback.py  test_association_confidence_compat.py  test_association_coverage.py  test_association_crawler_contract.py  test_association_fallback_grounding.py  test_association_health.py  test_association_health_slice5.py  test_association_inference_v21_contract.py  test_association_pass_contract.py  test_association_pass_strengthened.py  test_association_policy_contract.py  test_association_quality_policy.py  test_association_quarantine_dedupe.py  test_association_slo.py  test_association_slo_cli.py  test_association_slo_slice6.py  test_association_type_policy.py  test_authority_enforcement.py  test_auto_archive_hold.py  test_backend_capabilities.py  test_backend_parity.py  (+479 more)
tools/mem-beads/: associate.py  consolidate.py  extract-beads.py  install.sh  mem-beads  mem_beads.py  pyproject.toml  run_association.sh  setup.py  test_e2e.py  test_edges.py
tools/mem-beads/archive/: turn_prompt.py
tools/mem-beads/core_memory/: __init__.py  cli.py  dreamer.py  events.py  models.py  py.typed  store.py
tools/mem-beads/mem_beads/: __main__.py
(+730 files in other folders)
