[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "core-memory"
version = "1.0.1"
description = "Persistent causal agent memory with lossless compaction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Krusty", email = "krusty@clawdio.dev"}
]
keywords = ["memory", "agent", "causal", "beads", "compaction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
http = ["fastapi", "uvicorn", "httpx"]
pydanticai = ["pydantic-ai"]

[project.scripts]
core-memory = "core_memory.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core_memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
