[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "core-memory"
version = "1.1.1"
description = "Persistent causal agent memory with lossless compaction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "John Inniger", email = "john@linelead.io"}
]
maintainers = [
    {name = "John Inniger", email = "john@linelead.io"}
]
keywords = ["memory", "agent", "causal", "beads", "compaction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/JohnnyFiv3r/Core-Memory"
Repository = "https://github.com/JohnnyFiv3r/Core-Memory"
Issues = "https://github.com/JohnnyFiv3r/Core-Memory/issues"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
http = ["fastapi", "uvicorn", "httpx"]
mcp = ["fastapi", "uvicorn", "httpx", "mcp>=1.27.1,<2"]
pydanticai = ["pydantic-ai"]
semantic = ["numpy", "faiss-cpu"]
tokenizer = ["tiktoken"]
openai = ["openai"]
anthropic = ["anthropic"]
google = ["google-genai"]
qdrant = ["qdrant-client[fastembed]>=1.9"]
kuzu = ["kuzu>=0.4"]
chromadb = ["chromadb"]
pgvector = ["psycopg[binary]"]
langchain = ["langchain-core"]
crewai = ["crewai"]
neo4j = ["neo4j"]
encryption = ["cryptography"]
all = [
    "fastapi", "uvicorn", "httpx", "mcp>=1.27.1,<2",
    "pydantic-ai",
    "numpy", "faiss-cpu",
    "openai", "anthropic", "google-genai",
    "tiktoken",
    "neo4j",
    "qdrant-client[fastembed]>=1.9",
    "kuzu>=0.4",
]

[project.scripts]
core-memory = "core_memory.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core_memory*"]

[tool.setuptools.package-data]
"core_memory.config.defaults" = ["*.yaml"]
"core_memory.integrations.mcp" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
markers = [
    "facade: tests that import from core_memory.graph.api (targeted for Phase 4 removal)",
    "mixin_assembly: tests that instantiate MemoryStore end-to-end via mixin chain (targeted for Phase 5)",
    "pydanticai: tests that require the pydanticai optional extra",
    "neo4j: tests that require a live Neo4j instance",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
