[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mem-beads"
version = "1.0.0"
description = "Persistent causal agent memory with lossless compaction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Krusty", email = "krusty@clawdio.dev"}
]
keywords = ["memory", "agent", "causal", "beads", "compaction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mem-beads = "mem_beads.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mem_beads*"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
